# feedsnap

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.cli/: README.md  changelog.md  commands.json
.cli/examples/: snap.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/feedsnap/: cli.py  fetcher.py  formatter.py  introspect.py  seen_db.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_formatter.py  test_introspect.py  test_seen_db.py
